<resources>
    <string name="app_name">LoftblogMoneyTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_logout">Logout</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="name_text">Name</string>
    <string name="sum_text">Sum</string>
    <string name="data_text">Data</string>
    <string name="text_for_other">Other Tex</string>
    <string name="statistic_text">Здесь будет статистика</string>
    <string name="settings_text">Здесь будут настройки</string>
        <!--Строки для NavigationDrawer-->
    <string name="nav.drawer.finance">Учет финансов</string>
    <string name="nav.drawer.expenses">Траты</string>
    <string name="nav.drawer.categories">Категории</string>
    <string name="nav.drawer.statistics">Статистика</string>
    <string name="nav.drawer.settings">Настройки</string>
    <string name="nav.drawer.account">Управление аккаунтом</string>
    <string name="nav.drawer.exit">Выход</string>
    <string name="nav.drawer.sync">Синхронизация</string>
    <string name="avatar">Avatar</string>
    <string name="header_name">Alexandr Zotkin</string>
    <string name="header_email">oxionaz@gmail.com</string>
        <!--Строки для AddExpenseActivity-->
    <string name="add_expenses">Добавить трату</string>
    <string name="tovar">Товар</string>
    <string name="summa">Сумма</string>
    <string name="kategotiya">Категория</string>
    <string name="data">Дата</string>
    <string name="segodnya">сегодня</string>
    <string name="add_expense">Добавить трату</string>
    <string name="category_text">Category</string>
    <string name="hint_text_name">введите наименование</string>
    <string name="hint_text_sum">введите сумму</string>
    <string name="expense_name_empty">Вы не ввели наименование</string>
    <string name="expense_sum_empty">Вы не ввели сумму</string>
        <!--Строки для Registration&LoginActivity-->
    <string name="registation_bar">Регистрация пользователя</string>
    <string name="text_login">Логин</string>
    <string name="text_password">Пароль</string>
    <string name="reg_name_empty">Вы не ввели логин</string>
    <string name="reg_password_empty">Вы не ввели пароль</string>
    <string name="reg_name_wrong">Данный логин уже используется</string>
    <string name="login_name_wrong">Данный логин не зарегистрирован</string>
    <string name="login_password_wrong">Неверный пароль</string>
    <string name="login_wrong">Ошибка аутентификации</string>
    <string name="no_internet_connection">Отсутствует подключение к интернету</string>
    <string name="registration_button">Зарегистрировать</string>
    <string name="login_bar">MoneyTracker</string>
    <string name="login_button">Вход</string>
    <string name="login_button_register">Регистрация</string>
    <string name="unknown_error">Ошибка сервера</string>
        <!--Строки для authenticator-->
    <string name="content_authority" translatable="false">ru.loftschool.loftblogmoneytracker</string>
    <string name="sync_account_type" translatable="false">loftblogmoneytracker.loftschool.ru</string>
        <!--Строки для ActionBar-->
    <string name="delete">Delete</string>
    <string name="select_all">SelectAll</string>
        <!--Строки для AlertDialog-->
    <string name="alert_dialog_text_title">Добавление категории</string>
    <string name="alert_dialog_text_content">Введите название новой категории:</string>
    <string name="alert_dialog_text_cancel">Отмена</string>
    <string name="alert_dialog_text_add">Добавить</string>
    <string name="alert_dialog_remove_accept">Удалить</string>
    <string name="category_add_added_text">"Добавлена категория: "</string>
    <string name="category_remove_dialog_title">Удалить выбранные категории?</string>
    <string name="category_remove_dialog_text">"Удаление категорий приведет к удалению соответствующих им трат! Вы действительно хотите удалить категории?</string>
    <string name="category_name_empty">Вы не ввели название категории</string>
    <string name="category_name_used">Название категории уже используется</string>

    <string name="search_hint">Поиск</string>
    <string name="statistic_null_text">Ваш список трат пуст</string>
    <string name="statistic_add_text">Добавить трату</string>
    <string name="percent_text">100%</string>
        <!--Строки для Notification Enabled preference-->
    <string name="pref_notification_section">Notification</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Updates Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_notification_settings_section">Notification settings</string>
    <string name="pref_disable" translatable="false">false</string>

    <string name="pref_enable_sound_key" translatable="false">enable_sound</string>
    <string name="pref_enable_sound_label">Sound</string>
    <string name="pref_enable_sound_default" translatable="false">true</string>

    <string name="pref_enable_vibration_key" translatable="false">enable_vibrate</string>
    <string name="pref_enable_vibration_label">Vibration</string>
    <string name="pref_enable_vibration_default" translatable="false">true</string>

    <string name="pref_enable_indicator_key" translatable="false">enable_indicator</string>
    <string name="pref_enable_indicator_label">Lights indicator</string>
    <string name="pref_enable_indicator_default" translatable="false">true</string>

        <!--Строки для notification bar-->
    <string name="notification_message">Данные синхронизированы!</string>
    <string name="add_date">Выбрать дату</string>
</resources>
