<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/Container.Background">

    <include layout="@layout/toolbar"/>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:layout_marginLeft="@dimen/radius"
        android:layout_marginRight="@dimen/radius"
        card_view:cardCornerRadius="@dimen/radius"
        card_view:contentPadding="@dimen/activity_horizontal_margin"
        card_view:cardBackgroundColor="@color/white">
        >

    <GridLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addExpenseGrid"
                android:columnCount="2"
                android:rowCount="4">
        <TextView
            android:id="@+id/name_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="start|center"
            android:text="@string/tovar"
            />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/content_height"
            android:layout_gravity="fill"
            />

        <TextView
            android:id="@+id/sum_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="start|center"
            android:text="@string/summa"
            />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/content_height"
            android:layout_gravity="fill"
            android:numeric="decimal"
            />

        <TextView
            android:id="@+id/cat_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="start|center"
            android:text="@string/kategotiya"
            />

        <Spinner
            android:id="@+id/etCategory"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/content_height"
            android:layout_gravity="fill"
            android:spinnerMode="dropdown"
            />

        <TextView
            android:id="@+id/d_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="start|center"
            android:text="@string/data"
            />

        <TextView
            android:id="@+id/etDate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/content_height"
            android:layout_gravity="fill"
            android:gravity="start|center"
            android:hint="@string/segodnya"
            />

        <Button
            android:id="@+id/add_expense_button"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_expense"
            android:layout_columnSpan="2"/>
    </GridLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>