<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/radius"
        card_view:contentPadding="@dimen/activity_horizontal_margin"
        card_view:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_text"
        android:textSize="@dimen/medium_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"/>

    <TextView
        android:id="@+id/sum_text"
        android:textSize="@dimen/medium_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:text="@string/sum_text"/>

    <TextView
        android:id="@+id/data_text"
        android:textSize="@dimen/small_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text"
        android:text="@string/data_text"/>

    </RelativeLayout>

    </android.support.v7.widget.CardView>
