<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/header"
                android:paddingLeft="@dimen/header_padding_rl"
                android:paddingRight="@dimen/header_padding_rl"
                android:paddingBottom="@dimen/header_padding_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/drawer_header_height"
                android:background="@drawable/drawer_patt_1"
                android:orientation="vertical"
                android:paddingTop="@dimen/drawer_paddingTop"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:src="@drawable/avatar"
        android:layout_above="@+id/subtitle"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        app:border_width="@dimen/border_width_zero"
        android:contentDescription="@string/avatar"/>

    <LinearLayout
        android:id="@+id/subtitle"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/subtitle_size"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/user_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:id="@+id/user_email"
            android:text="@string/header_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>