<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:background="@color/white"
    android:elevation="24dp"
    card_view:cardCornerRadius="@dimen/radius"
    tools:ignore="UnusedAttribute">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/dialog_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:text="@string/alert_dialog_text_title"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dialog_category_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:text="@string/alert_dialog_text_content"/>

        <EditText
            android:id="@+id/dialog_category_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/max_length"
            android:inputType="textNoSuggestions"
            android:layout_marginBottom="@dimen/border_margin"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="end"
                  android:padding="8dp"
                  android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_category_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:padding="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="end"
            android:minWidth="64dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/alert_dialog_text_cancel"
            android:textColor="@color/primary"/>

        <Button
            android:id="@+id/dialog_category_okButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:padding="8dp"
            android:minWidth="64dp"
            android:layout_marginLeft="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:shadowColor="@android:color/transparent"
            android:layout_gravity="end"
            android:text="@string/alert_dialog_text_add"
            android:textColor="@color/primary"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>